11-gocd/server/go-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: gocd-server
  labels:
    app: gocd-server
spec:
  ports:
  - port: 8154
    name: web-ssl
  - port: 8153
    name: web
  selector:
    app: gocd-server
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: gocd-server
spec:
  selector:
    matchLabels:
      app: gocd-server # has to match .spec.template.metadata.labels
  updateStrategy:
    type: RollingUpdate
  serviceName: "gocd-server"
  replicas: 1 # by default is 1
  template:
    metadata:
      labels:
        app: gocd-server # has to match .spec.selector.matchLabels
    spec:
      securityContext:
        fsGroup: 1000
      terminationGracePeriodSeconds: 10
      containers:
      - name: gocd-server
        securityContext:
          runAsUser: 1000
        image: gocd/gocd-server:v19.7.0
        resources:
          requests:
            cpu: 300m
            memory: 1Gi
        livenessProbe:
          httpGet:
            # when "host" is not defined, "PodIP" will be used
            # host: my-host
            # when "scheme" is not defined, "HTTP" scheme will be used. Only "HTTP" and "HTTPS" are allowed
            scheme: HTTPS
            path: /
            port: 8154
            httpHeaders:
            - name: X-Custom-Header
              value: Awesome
          initialDelaySeconds: 720
          timeoutSeconds: 1
        ports:
        - containerPort: 8154
          name: web-ssl
        - containerPort: 8153
          name: web
        volumeMounts:
        - name: godata
          mountPath: /godata
        - name: gohome
          mountPath: /home/go
      volumes:
        - name: gocd-agent-secret
          secret:
            secretName: gocd-agent-secret
            defaultMode: 0400
  volumeClaimTemplates:
  - metadata:
      name: godata
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Gi
  - metadata:
      name: gohome
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 20Gi
